--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
   <!-- MODEL -->
   <div data-include="data/GUF-cat.respec.html" data-include-replace=true></div>
   
+  <!-- BIJLAGE -->
+  <section id="GUF-bijlage" data-format="markdown" data-include='guf-bijlage.md'></section>	
+	
 </body>
 
 </html>
