--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210628</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20220314-110654</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20220314-111917</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -63,7 +63,7 @@
          <section>
             <h2>Het domeinmodel</h2>
             <section id="">
-               <div class="imageinfo overview"><img src="Images/EAID_56F5F935_4109_4da0_A034_9EA7B40769E1.png" usemap="#imagemap-EAID_56F5F935_4109_4da0_A034_9EA7B40769E1" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_56F5F935_4109_4da0_A034_9EA7B40769E1"><area shape="rect" alt="Verkenning" coords="902,1052,1134,1132" href="#graph_EAID_1013D8B2_A4E7_456c_B8BD_D8785259B572"><area shape="rect" alt="Gerealiseerde bodemlus" coords="712,765,932,928" href="#graph_EAID_D45703EE_CCD5_434c_A478_BFA48D1A9DCB"><area shape="rect" alt="Gerealiseerde oppervlakteinfiltratie" coords="939,765,1195,927" href="#graph_EAID_8F717FBD_49AE_47b7_80F3_B91D0A2E3D0C"><area shape="rect" alt="Ontwerpoppervlakteinfiltratie" coords="311,962,564,1110" href="#graph_EAID_48E92D7E_DFE4_4e1a_9CBF_EF96B0324D5C"><area shape="rect" alt="Ontwerpbodemlus" coords="89,962,305,1110" href="#graph_EAID_B81BCB5C_B9C7_42d9_9F9E_3F76580BB410"><area shape="rect" alt="Ontwerpput" coords="563,962,856,1215" href="#graph_EAID_FC483397_9430_4114_AE54_A7BE5A654EA9"><area shape="rect" alt="Gerealiseerde installatie" coords="1059,527,1399,705" href="#graph_EAID_45C4EF5D_AC27_47cc_926D_7F514776B53D"><area shape="rect" alt="Gerealiseerde filter" coords="1221,1049,1525,1263" href="#graph_EAID_9D151445_53ED_4738_9920_071518BB50C1"><area shape="rect" alt="Recht grondwatergebruik" coords="303,390,639,544" href="#graph_EAID_1A591F8A_2ECC_4122_86C9_26BFA5C5420E"><area shape="rect" alt="Gerealiseerde put" coords="1203,765,1485,996" href="#graph_EAID_F75BA1C9_02EB_48e6_B9A8_A018120E2279"><area shape="rect" alt="Ontwerpinstallatie" coords="273,632,629,819" href="#graph_EAID_DB2636FB_090C_4af0_AA40_4301B23795E2"><area shape="rect" alt="Grondwatergebruiksysteem" coords="714,222,1017,483" href="#graph_EAID_048DC684_486B_4605_B9CA_40413DB3C9DC"><area shape="rect" alt="Registratieobject" coords="788,113,907,156" href="#graph_EAID_2AC7632D_D0CE_4468_8510_855B506BE12A"></map><p><b>Domeinmodel GUF conceptueel</b></p>
+               <div class="imageinfo overview"><img src="Images/EAID_56F5F935_4109_4da0_A034_9EA7B40769E1.png" usemap="#imagemap-EAID_56F5F935_4109_4da0_A034_9EA7B40769E1" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_56F5F935_4109_4da0_A034_9EA7B40769E1"><area shape="rect" alt="Verkenning" coords="848,986,1080,1066" href="#graph_EAID_1013D8B2_A4E7_456c_B8BD_D8785259B572"><area shape="rect" alt="Gerealiseerde bodemlus" coords="658,699,878,862" href="#graph_EAID_D45703EE_CCD5_434c_A478_BFA48D1A9DCB"><area shape="rect" alt="Gerealiseerde oppervlakteinfiltratie" coords="885,699,1141,861" href="#graph_EAID_8F717FBD_49AE_47b7_80F3_B91D0A2E3D0C"><area shape="rect" alt="Ontwerpoppervlakteinfiltratie" coords="257,896,512,1044" href="#graph_EAID_48E92D7E_DFE4_4e1a_9CBF_EF96B0324D5C"><area shape="rect" alt="Ontwerpbodemlus" coords="35,896,251,1044" href="#graph_EAID_B81BCB5C_B9C7_42d9_9F9E_3F76580BB410"><area shape="rect" alt="Ontwerpput" coords="527,896,820,1149" href="#graph_EAID_FC483397_9430_4114_AE54_A7BE5A654EA9"><area shape="rect" alt="Gerealiseerde installatie" coords="1005,461,1345,639" href="#graph_EAID_45C4EF5D_AC27_47cc_926D_7F514776B53D"><area shape="rect" alt="Gerealiseerde filter" coords="1167,983,1471,1197" href="#graph_EAID_9D151445_53ED_4738_9920_071518BB50C1"><area shape="rect" alt="Recht grondwatergebruik" coords="249,324,585,478" href="#graph_EAID_1A591F8A_2ECC_4122_86C9_26BFA5C5420E"><area shape="rect" alt="Gerealiseerde put" coords="1149,699,1431,930" href="#graph_EAID_F75BA1C9_02EB_48e6_B9A8_A018120E2279"><area shape="rect" alt="Ontwerpinstallatie" coords="219,566,575,753" href="#graph_EAID_DB2636FB_090C_4af0_AA40_4301B23795E2"><area shape="rect" alt="Grondwatergebruiksysteem" coords="660,156,963,417" href="#graph_EAID_048DC684_486B_4605_B9CA_40413DB3C9DC"><area shape="rect" alt="Registratieobject" coords="734,47,853,90" href="#graph_EAID_2AC7632D_D0CE_4468_8510_855B506BE12A"></map><p><b>Domeinmodel GUF conceptueel</b></p>
                </div>
             </section>
          </section>
@@ -1861,7 +1861,7 @@
                   </section>
                </section><a class="anchor" id="graph_EAID_48E92D7E_DFE4_4e1a_9CBF_EF96B0324D5C"></a><a class="anchor" id="global_class_Model_Ontwerpoppervlakteinfiltratie"></a><section id="global_class_Model_Ontwerpoppervlakteinfiltratie">
                   <h3>   Ontwerpoppervlakteinfiltratie</h3>
-                  <div class="imageinfo "><img src="Images/EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955.png" usemap="#imagemap-EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955" alt="Diagram "><map name="imagemap-EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955"><area shape="rect" alt="TijdvakLevensduur" coords="379,65,579,157" href="#graph_EAID_7C14BEF4_6FA0_4e19_9FB4_DFDD995B1187"><area shape="rect" alt="Ontwerpoppervlakteinfiltratie" coords="43,65,296,214" href="#graph_EAID_48E92D7E_DFE4_4e1a_9CBF_EF96B0324D5C"></map><p><b></b></p>
+                  <div class="imageinfo "><img src="Images/EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955.png" usemap="#imagemap-EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955" alt="Diagram "><map name="imagemap-EAID_9A38E556_5C70_474e_9BA3_7FC8379A3955"><area shape="rect" alt="TijdvakLevensduur" coords="379,65,579,157" href="#graph_EAID_7C14BEF4_6FA0_4e19_9FB4_DFDD995B1187"><area shape="rect" alt="Ontwerpoppervlakteinfiltratie" coords="43,65,298,214" href="#graph_EAID_48E92D7E_DFE4_4e1a_9CBF_EF96B0324D5C"></map><p><b></b></p>
                   </div>
                   <table style="width: 100%;">
                      <colgroup style="width: 30%;"></colgroup>
@@ -1995,8 +1995,8 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_attribute_Model_Ontwerpoppervlakteinfiltratie_geometryopenbaarraadpleegbaar"></a><section id="detail_attribute_Model_Ontwerpoppervlakteinfiltratie_geometryopenbaarraadpleegbaar">
-                     <h4>  geometry openbaar raadpleegbaar</h4>
+                     </section><a class="anchor" id="detail_attribute_Model_Ontwerpoppervlakteinfiltratie_geometrieopenbaarraadpleegbaar"></a><section id="detail_attribute_Model_Ontwerpoppervlakteinfiltratie_geometrieopenbaarraadpleegbaar">
+                     <h4>  geometrie openbaar raadpleegbaar</h4>
                      
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
