--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -5202,8 +5202,7 @@
                   <th>Definitie</th>
                   <td>
                      
-                     <p>Het kenmerk van de verkenning die is uitgevoerd voorafgaand aan de plaatsing van de
-                        constructie.</p>
+                     <p>De verkenning(en) die is/zijn uitgevoerd voorafgaand aan de plaatsing van de constructie.</p>
                      </td>
                </tr>
                <tr>
@@ -5212,7 +5211,8 @@
                      
                      <p>Er kunnen meerdere verkenningen zijn uitgevoerd. Het kan bijvoorbeeld gaan om een
                         booronderzoek met een boormonsterbeschrijving maar ook bijvoorbeeld een boormonsteranalyse,
-                        een boorgatmeting of een sondering. Elke gerelateerde verkenning wordt geregistreerd.</p>
+                        een boorgatmeting of een sondering. Van elke uitgevoerde verkenning wordt de identificatie
+                        geregistreerd.</p>
                      </td>
                </tr>
             </tbody>
@@ -5241,7 +5241,7 @@
                   </tr>
                   <tr>
                      <th>Kardinaliteit</th>
-                     <td>0..*</td>
+                     <td>1..*</td>
                   </tr>
                   <tr>
                      <th>Domein</th>
