--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -1328,8 +1328,7 @@
                      <th>Regels</th>
                      <td>
                         
-                        <p>De gegevensgroep moet aanwezig zijn wanneer de waarde van het attribuut <em>kwaliteitsregime</em> van de entiteit <em>Grondwatergebruikssysteem</em> gelijk is aan IMBRO en de waarde van het attribuut <em>installatiefunctie</em> gelijk is aan <em>openBodemenergiesysteem</em> of <em>geslotenBodemenergiesysteem</em>.<br clear="none">
-                           De gegevensgroep mag niet aanwezig zijn in alle andere gevallen.</p>
+                        <p>De gegevensgroep moet aanwezig zijn wanneer de waarde van het attribuut <em>kwaliteitsregime</em> van de entiteit <em>Grondwatergebruikssysteem</em> gelijk is aan IMBRO en de waarde van het attribuut <em>installatiefunctie</em> gelijk is aan <em>openBodemenergiesysteem</em> of <em>geslotenBodemenergiesysteem</em>. De gegevensgroep mag niet aanwezig zijn in alle andere gevallen.</p>
                         </td>
                   </tr>
                   <tr>
@@ -1348,7 +1347,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e5657"></a><section id="detail_d64853e5657">
+         </section><a class="anchor" id="detail_d64853e5647"></a><section id="detail_d64853e5647">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1782,7 +1781,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e6518"></a><section id="detail_d64853e6518">
+            </section><a class="anchor" id="detail_d64853e6508"></a><section id="detail_d64853e6508">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2019,7 +2018,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e7399"></a><section id="detail_d64853e7399">
+            </section><a class="anchor" id="detail_d64853e7389"></a><section id="detail_d64853e7389">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2718,7 +2717,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e9734"></a><section id="detail_d64853e9734">
+            </section><a class="anchor" id="detail_d64853e9724"></a><section id="detail_d64853e9724">
             <h4>  filtertraject</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -2777,7 +2776,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e10025"></a><section id="detail_d64853e10025">
+         </section><a class="anchor" id="detail_d64853e10015"></a><section id="detail_d64853e10015">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3007,7 +3006,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e11361"></a><section id="detail_d64853e11361">
+            </section><a class="anchor" id="detail_d64853e11351"></a><section id="detail_d64853e11351">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3045,7 +3044,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e11528"></a><section id="detail_d64853e11528">
+         </section><a class="anchor" id="detail_d64853e11518"></a><section id="detail_d64853e11518">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3612,7 +3611,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e12906"></a><section id="detail_d64853e12906">
+            </section><a class="anchor" id="detail_d64853e12896"></a><section id="detail_d64853e12896">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3903,7 +3902,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e13804"></a><section id="detail_d64853e13804">
+            </section><a class="anchor" id="detail_d64853e13794"></a><section id="detail_d64853e13794">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3941,7 +3940,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e13971"></a><section id="detail_d64853e13971">
+         </section><a class="anchor" id="detail_d64853e13961"></a><section id="detail_d64853e13961">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4495,7 +4494,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e16146"></a><section id="detail_d64853e16146">
+            </section><a class="anchor" id="detail_d64853e16136"></a><section id="detail_d64853e16136">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4532,7 +4531,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e16313"></a><section id="detail_d64853e16313">
+         </section><a class="anchor" id="detail_d64853e16303"></a><section id="detail_d64853e16303">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5110,7 +5109,7 @@
                   </tr>
                </tbody>
             </table>
-            </section><a class="anchor" id="detail_d64853e17896"></a><section id="detail_d64853e17896">
+            </section><a class="anchor" id="detail_d64853e17886"></a><section id="detail_d64853e17886">
             <h4>  geldigheidsduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5147,7 +5146,7 @@
                   </tr>
                </tbody>
             </table>
-         </section><a class="anchor" id="detail_d64853e18063"></a><section id="detail_d64853e18063">
+         </section><a class="anchor" id="detail_d64853e18053"></a><section id="detail_d64853e18053">
             <h4>  levensduur</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
