--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210628</p>
       <p>Imvertor: 1.65.4</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20220323-154005</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20220323-172129</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1352,8 +1352,7 @@
                               <th>Regels</th>
                               <td>
                                  
-                                 <p>De gegevensgroep moet aanwezig zijn wanneer de waarde van het attribuut <em>kwaliteitsregime</em> van de entiteit <em>Grondwatergebruikssysteem</em> gelijk is aan IMBRO en de waarde van het attribuut <em>installatiefunctie</em> gelijk is aan <em>openBodemenergiesysteem</em> of <em>geslotenBodemenergiesysteem</em>.<br clear="none">
-                                    De gegevensgroep mag niet aanwezig zijn in alle andere gevallen.</p>
+                                 <p>De gegevensgroep moet aanwezig zijn wanneer de waarde van het attribuut <em>kwaliteitsregime</em> van de entiteit <em>Grondwatergebruikssysteem</em> gelijk is aan IMBRO en de waarde van het attribuut <em>installatiefunctie</em> gelijk is aan <em>openBodemenergiesysteem</em> of <em>geslotenBodemenergiesysteem</em>. De gegevensgroep mag niet aanwezig zijn in alle andere gevallen.</p>
                                  </td>
                            </tr>
                            <tr>
@@ -1372,7 +1371,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e5657"></a><section id="detail_d64853e5657">
+                  </section><a class="anchor" id="detail_d64853e5647"></a><section id="detail_d64853e5647">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1806,7 +1805,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e6518"></a><section id="detail_d64853e6518">
+                     </section><a class="anchor" id="detail_d64853e6508"></a><section id="detail_d64853e6508">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2043,7 +2042,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e7399"></a><section id="detail_d64853e7399">
+                     </section><a class="anchor" id="detail_d64853e7389"></a><section id="detail_d64853e7389">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2742,7 +2741,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e9734"></a><section id="detail_d64853e9734">
+                     </section><a class="anchor" id="detail_d64853e9724"></a><section id="detail_d64853e9724">
                      <h4>  filtertraject</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2801,7 +2800,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e10025"></a><section id="detail_d64853e10025">
+                  </section><a class="anchor" id="detail_d64853e10015"></a><section id="detail_d64853e10015">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3031,7 +3030,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e11361"></a><section id="detail_d64853e11361">
+                     </section><a class="anchor" id="detail_d64853e11351"></a><section id="detail_d64853e11351">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3069,7 +3068,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e11528"></a><section id="detail_d64853e11528">
+                  </section><a class="anchor" id="detail_d64853e11518"></a><section id="detail_d64853e11518">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3636,7 +3635,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e12906"></a><section id="detail_d64853e12906">
+                     </section><a class="anchor" id="detail_d64853e12896"></a><section id="detail_d64853e12896">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3927,7 +3926,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e13804"></a><section id="detail_d64853e13804">
+                     </section><a class="anchor" id="detail_d64853e13794"></a><section id="detail_d64853e13794">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3965,7 +3964,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e13971"></a><section id="detail_d64853e13971">
+                  </section><a class="anchor" id="detail_d64853e13961"></a><section id="detail_d64853e13961">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4519,7 +4518,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e16146"></a><section id="detail_d64853e16146">
+                     </section><a class="anchor" id="detail_d64853e16136"></a><section id="detail_d64853e16136">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4556,7 +4555,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e16313"></a><section id="detail_d64853e16313">
+                  </section><a class="anchor" id="detail_d64853e16303"></a><section id="detail_d64853e16303">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5134,7 +5133,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d64853e17896"></a><section id="detail_d64853e17896">
+                     </section><a class="anchor" id="detail_d64853e17886"></a><section id="detail_d64853e17886">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5171,7 +5170,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d64853e18063"></a><section id="detail_d64853e18063">
+                  </section><a class="anchor" id="detail_d64853e18053"></a><section id="detail_d64853e18053">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
