--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210628</p>
       <p>Imvertor: 1.67.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20221110-090306</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20221117-103537</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -436,7 +436,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e1981"></a><section id="detail_d70022e1981">
+                     </section><a class="anchor" id="detail_d70100e1981"></a><section id="detail_d70100e1981">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -487,7 +487,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e2216"></a><section id="detail_d70022e2216">
+                  </section><a class="anchor" id="detail_d70100e2216"></a><section id="detail_d70100e2216">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -532,7 +532,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e2443"></a><section id="detail_d70022e2443">
+                  </section><a class="anchor" id="detail_d70100e2443"></a><section id="detail_d70100e2443">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -578,7 +578,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e2669"></a><section id="detail_d70022e2669">
+                  </section><a class="anchor" id="detail_d70100e2669"></a><section id="detail_d70100e2669">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -850,7 +850,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e3499"></a><section id="detail_d70022e3499">
+                     </section><a class="anchor" id="detail_d70100e3499"></a><section id="detail_d70100e3499">
                      <h4>  gebruiksdoel systeem</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -887,7 +887,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e3684"></a><section id="detail_d70022e3684">
+                  </section><a class="anchor" id="detail_d70100e3684"></a><section id="detail_d70100e3684">
                      <h4>  maximale waterverplaatsing</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -953,7 +953,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e3987"></a><section id="detail_d70022e3987">
+                  </section><a class="anchor" id="detail_d70100e3987"></a><section id="detail_d70100e3987">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1251,7 +1251,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e5389"></a><section id="detail_d70022e5389">
+                     </section><a class="anchor" id="detail_d70100e5389"></a><section id="detail_d70100e5389">
                      <h4>  maximale waterverplaatsing</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1315,7 +1315,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e5643"></a><section id="detail_d70022e5643">
+                  </section><a class="anchor" id="detail_d70100e5643"></a><section id="detail_d70100e5643">
                      <h4>  energiekenmerken</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1371,7 +1371,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e5987"></a><section id="detail_d70022e5987">
+                  </section><a class="anchor" id="detail_d70100e5987"></a><section id="detail_d70100e5987">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1805,7 +1805,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e6893"></a><section id="detail_d70022e6893">
+                     </section><a class="anchor" id="detail_d70100e6893"></a><section id="detail_d70100e6893">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2042,7 +2042,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e7820"></a><section id="detail_d70022e7820">
+                     </section><a class="anchor" id="detail_d70100e7820"></a><section id="detail_d70100e7820">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2742,7 +2742,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e10261"></a><section id="detail_d70022e10261">
+                     </section><a class="anchor" id="detail_d70100e10261"></a><section id="detail_d70100e10261">
                      <h4>  filtertraject</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2801,7 +2801,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e10570"></a><section id="detail_d70022e10570">
+                  </section><a class="anchor" id="detail_d70100e10570"></a><section id="detail_d70100e10570">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3031,7 +3031,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e11951"></a><section id="detail_d70022e11951">
+                     </section><a class="anchor" id="detail_d70100e11951"></a><section id="detail_d70100e11951">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3069,7 +3069,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e12136"></a><section id="detail_d70022e12136">
+                  </section><a class="anchor" id="detail_d70100e12136"></a><section id="detail_d70100e12136">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3636,7 +3636,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e13578"></a><section id="detail_d70022e13578">
+                     </section><a class="anchor" id="detail_d70100e13578"></a><section id="detail_d70100e13578">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3927,7 +3927,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e14522"></a><section id="detail_d70022e14522">
+                     </section><a class="anchor" id="detail_d70100e14522"></a><section id="detail_d70100e14522">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3965,7 +3965,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e14707"></a><section id="detail_d70022e14707">
+                  </section><a class="anchor" id="detail_d70100e14707"></a><section id="detail_d70100e14707">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4519,7 +4519,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e16973"></a><section id="detail_d70022e16973">
+                     </section><a class="anchor" id="detail_d70100e16973"></a><section id="detail_d70100e16973">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4556,7 +4556,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e17158"></a><section id="detail_d70022e17158">
+                  </section><a class="anchor" id="detail_d70100e17158"></a><section id="detail_d70100e17158">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5134,7 +5134,7 @@
                            </tr>
                         </tbody>
                      </table>
-                     </section><a class="anchor" id="detail_d70022e18823"></a><section id="detail_d70022e18823">
+                     </section><a class="anchor" id="detail_d70100e18823"></a><section id="detail_d70100e18823">
                      <h4>  geldigheidsduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5171,7 +5171,7 @@
                            </tr>
                         </tbody>
                      </table>
-                  </section><a class="anchor" id="detail_d70022e19008"></a><section id="detail_d70022e19008">
+                  </section><a class="anchor" id="detail_d70100e19008"></a><section id="detail_d70100e19008">
                      <h4>  levensduur</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -8637,6 +8637,15 @@
                      <td>
                         
                         <p>De gegevens zijn aangeleverd in het kader van het Besluit lozen buiten inrichtingen.</p>
+                        </td>
+                  </tr>
+                  <tr>
+                     <td>archiefoverdracht</td>
+                     <td></td>
+                     <td>✔</td>
+                     <td>
+                        
+                        <p>De gegevens zijn aangeleverd in het kader van archiefoverdracht.</p>
                         </td>
                   </tr>
                </tbody>
