Handmatig bijgewerkte GUF-cat.respec.html om TV 'Regels IMBRO/A' toe te voegen aan Gegevensgroep Energiekenmerken.

--- a/data/GUF-cat.respec.html
+++ b/data/GUF-cat.respec.html
@@ -1332,6 +1332,13 @@
                         </td>
                   </tr>
                   <tr>
+                     <th>Regels IMBRO/A</th>
+                     <td>
+                        
+                        <p>Voor IMBRO/A gegevens mag de gegevensgroep ontbreken wanneer de waarde van het attribuut <em>installatiefunctie</em> gelijk is aan <em>openBodemenergiesysteem</em> of <em>geslotenBodemenergiesysteem</em></p>
+                        </td>
+                  </tr>
+                  <tr>
                      <th>Materiële geschiedenis</th>
                      <td>Nee</td>
                   </tr>
