--- a/data/GUF-cat.msword.html
+++ b/data/GUF-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/Grondwatergebruik (GUF) conceptueel/20210628</p>
       <p>Imvertor: 1.67.1</p>
-      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20221219-140250</p>
+      <p>Model release: Conceptualmodel-GrondwatergebruikGUFconceptueel-0.992-3-20210628-20230112-151634</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -3702,7 +3702,7 @@
                            </tr>
                            <tr>
                               <th>Kardinaliteit</th>
-                              <td>0..1</td>
+                              <td>0..*</td>
                            </tr>
                            <tr>
                               <th>Relatiesoort naam</th>
@@ -4685,7 +4685,7 @@
                            </tr>
                            <tr>
                               <th>Kardinaliteit</th>
-                              <td>0..1</td>
+                              <td>0..*</td>
                            </tr>
                            <tr>
                               <th>Relatiesoort naam</th>
@@ -5226,7 +5226,8 @@
                            <th>Definitie</th>
                            <td>
                               
-                              <p>De verkenning(en) die is/zijn uitgevoerd voorafgaand aan de plaatsing van de constructie.</p>
+                              <p>Het kenmerk van de verkenning die is uitgevoerd voorafgaand aan de plaatsing van de
+                                 constructie.</p>
                               </td>
                         </tr>
                         <tr>
@@ -5235,8 +5236,7 @@
                               
                               <p>Er kunnen meerdere verkenningen zijn uitgevoerd. Het kan bijvoorbeeld gaan om een
                                  booronderzoek met een boormonsterbeschrijving maar ook bijvoorbeeld een boormonsteranalyse,
-                                 een boorgatmeting of een sondering. Van elke uitgevoerde verkenning wordt de identificatie
-                                 geregistreerd.</p>
+                                 een boorgatmeting of een sondering. Elke gerelateerde verkenning wordt geregistreerd.</p>
                               </td>
                         </tr>
                      </tbody>
@@ -5265,7 +5265,7 @@
                            </tr>
                            <tr>
                               <th>Kardinaliteit</th>
-                              <td>1..*</td>
+                              <td>1</td>
                            </tr>
                            <tr>
                               <th>Domein</th>
