--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<h4>Gemeten waarden</h4>
 				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
 				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
-				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
+				<section id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></section>
 			</section>
 			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>		
 			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
